<resources>
    <!--Main Activity Strings-->
    <string name="app_name">Dots &amp; Boxes</string>
    <string name="Title"><![CDATA[Dots & Boxes]]></string>
    <string name="Logo">Logo of App</string>

    <!--Main Page/Contents Page Strings-->
    <string name="vs_computer">Vs Computer</string>
    <string name="local_multiplayer">Local Multiplayer</string>
    <string name="settings">Settings</string>


    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- GameFragment_static Options Fragment Strings -->
    <string name="hint_allowed">Hint\'s</string>
    <string name="undo_allowed">Undo\'s</string>
    <string name="start">Start</string>

    <!--Theme Strings-->
    <string name="Theme">Themes</string>
    <string name="Theme1">White</string>
    <string name="Theme2">Light Blue</string>
    <string name="Theme3">Mild Blue</string>
    <string name="Theme4">Blue</string>
    <string name="Theme5">Dark Blue</string>

    <string name="CustomTheme">Custom Theme</string>
    <string name="R">R</string>
    <string name="G">G</string>
    <string name="B">B</string>
    <string name="RequiredFileds">Required Fields</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exception_playable_equal_remianing">Total playable not equal to remaining</string>
    <string name="exception_playable_horizontal_equal_vertical"><![CDATA[Horizontal & Vertical playable lines is not equal]]></string>
    <string name="exception_toast_pc_unable_line">PC failed to find a line</string>
    <string name="toast_wait_next_player">Waiting for next player\'s decision</string>
    <string name="switch_randomize_turns">Randomize Turns?</string>
    <string name="switch_quickmode">QuickMod</string>
    <string name="switch_p1starts">P1Starts</string>
    <string name="text__turns_player">6 Turns/player</string>
    <string name="text_total_no_players">Total No. Players = 5</string>
    <string name="text_number_of_ai_players">Number of AI Players</string>
    <string name="text_number_of_human_players">Number of Human Players</string>
    <string name="text_grid_size">Grid Size</string>


</resources>
