<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainPage">

    <TextView
        android:id="@+id/title2"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:shadowColor="#0C0101"
        android:shadowRadius="20"
        android:text="@string/Title"
        android:textAlignment="center"
        android:textColor="#EACD27"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/Main_Option1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="VsComputer"
        android:text="@string/vs_computer"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2"
        app:layout_constraintVertical_bias="0.141" />

    <TextView
        android:id="@+id/main_Option2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="LocalMultiplayer"
        android:text="@string/local_multiplayer"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Main_Option1"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/main_Option3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Settings"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_Option2"
        app:layout_constraintVertical_bias="0.201" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="82dp"
        android:layout_height="76dp"
        android:layout_marginTop="108dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_Option3"
        app:layout_constraintVertical_bias="0.369"
        app:srcCompat="@drawable/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>